--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://dara205lira.github.io/Portafolio_PP/'
 languageCode = 'en-us'
 title = 'Portafolio de Paradigmas de la Programación'
 theme = 'ananke'
